--- a/pom.xml
+++ b/pom.xml
@@ -239,6 +239,13 @@
          <artifactId>jedis</artifactId>
          <version>2.9.0</version>
        </dependency>
+
+       <dependency>
+           <groupId>org.hibernate.validator</groupId>
+           <artifactId>hibernate-validator</artifactId>
+           <version>6.0.1.Final</version>
+       </dependency>
+
    </dependencies>
    <build>
      <finalName>mmall</finalName>
@@ -266,6 +273,25 @@
              </compilerArguments>
            </configuration>
        </plugin>
+
+         <plugin>
+
+             <groupId>org.apache.maven.plugins</groupId>
+
+             <artifactId>maven-surefire-plugin</artifactId>
+
+             <version>2.12.4</version>
+
+             <configuration>
+
+                 <forkMode>once</forkMode>
+
+                 <argLine>-Dfile.encoding=UTF-8</argLine>
+
+             </configuration>
+
+         </plugin>
+
      </plugins>
    </build>
 
