--- a/.gitignore
+++ b/.gitignore
@@ -1,37 +1,31 @@
-*.class
+HELP.md
+target/
+!.mvn/wrapper/maven-wrapper.jar
+!**/src/main/**
+!**/src/test/**
 
-#package file
-
-*.war
-*.ear
-
-#kdiff3 ignore
-*.orig
-
-#maven igonre
-target.
-
-#eclipse igonre
-.settings/
+### STS ###
+.apt_generated
+.classpath
+.factorypath
 .project
-.classpatch
+.settings
+.springBeans
+.sts4-cache
 
-#idea
-.idea/
-/idea/
-*.ipr
-*.iml
+### IntelliJ IDEA ###
+.idea
 *.iws
+*.iml
+*.ipr
 
-# temp file
+### NetBeans ###
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+build/
 
-*.log
-*.cache
-*.diff
-*.patch
-*.tmp
-
-# system ignore
-
-.DS_Store
-Thumbs.db
+### VS Code ###
+.vscode/
